--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,14 @@ img{
     width: 190px;
     display: inline-block;
 }
+img:hover{
+    position: relative;
+    animation: animationImage 1s infinite;
+
+}
+@keyframes animationImage {
+    0% {top: 10px;}
+    50%{top: 0px;}
+    100%{top: 10px;}
+    
+}
